--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,6 @@
     </head>
     <body>
         {% include '_navbar.html.twig' %}
-        {% block body %}{% endblock %}
-        {% block h1 %}{% endblock %}
+        {% block programId %}{% endblock %}
     </body>
 </html>
