--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
+        <link rel="icon" href="/build/images/favicon.png"/>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -14,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-        {% include '_navbar.html.twig' %}
+    <header>{% include '_navbar.html.twig' %}</header>
         {% block programId %}{% endblock %}
     </body>
 </html>
