--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,6 @@
     </head>
     <body>
     <header>{% include '_navbar.html.twig' %}</header>
-        {% block programId %}{% endblock %}
+        {% block body %}{% endblock %}
     </body>
 </html>
