--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,9 @@
         {% endblock %}
     </head>
     <body>
-    <header>{% include '_navbar.html.twig' %}</header>
-        {% block body %}{% endblock %}
+    <header>
+    {% include '_navbar.html.twig' %}
+    </header>
+    {% block body %}{% endblock %}
     </body>
 </html>
