--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,4 +1,4 @@
-{% block title %}Série #{{ category.name }}{% endblock %}
+{% block title %}Catégories #{{ category.name }}{% endblock %}
 
 {% block body %}
     <div class="media">
@@ -13,7 +13,7 @@
     {% for program in programs %}
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - - Catégorie : {{ program.category.name }}</h2>
-            <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+            <a href="{{ path("program_show", { program_id: program.id }) }}">Voir la fiche</a>
         </div>
     {% else %}
         Aucune série trouvée.
