--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -12,8 +12,10 @@
             
             {% for season in program.seasons %}
             <p>Saison : {{ season.description }}</p>
-            <a href="{{ path('program_season_show', {'program_id': program.id, 'season_id': season.id}) }}">Voir les épisodes de la saison.
+            <a href="{{ path('program_season_show', {'program_id': program.id, 'season_id': season.id}) }}">Voir les épisodes de la saison {{ season.number }}.
             </a>
+            {% else %}
+            Aucune série trouvée.
             {% endfor %}
         </div>
     </div>
@@ -25,9 +27,9 @@
     <strong>Acteurs :</strong>
 <ul>
     {% for actor in program.actors %}
-        <li>{{ actor.name }} </li>
+        <a href="{{ path('actor_show',{'id': actor.id }) }}">{{ actor.name }}</a>
     {% else %}
-        <li>Aucun acteur pour cette série</li>
+        <li>Pas d'acteur pour cette série</li>
     {% endfor %}
 </ul>
     {% endblock %}
