--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -21,6 +21,14 @@
       <li class="nav-item">
         <a class="nav-link register" href="#">S'inscrire</a>
       </li>
+      <li class="nav-item">
+      {% if app.user %}
+    {{ app.user.email }}
+    <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+    {% else %}
+    <a href="{{ path('login') }}"> Se connecter</a>
+    {% endif %} 
+      </li>
     </ul>
   </div>
 </nav>
