--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -23,8 +23,9 @@
                 <td>{{ episode.number }}</td>
                 <td>{{ episode.synopsis }}</td>
                 <td>
-                    <a href="{{ path('episode_show', {'id': episode.id}) }}">show</a>
-                    <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
+                    <a href="{{ path('episode_show', {'slug': episode.slug}) }}">Show</a>
+                    <a href="{{ path('episode_edit', {'slug': episode.slug}) }}">Edit</a>
+                    <a href="{{ path('comment_new', {'slug': episode.slug}) }}">Comment</a>
                 </td>
             </tr>
         {% else %}
