--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -4,12 +4,19 @@
 
 {% block body %}
     <h1>Toutes les séries de la table program : </h1>
+    <h1>Toutes les séries</h1>
+
+{{ form_start(form) }}
+{{ form_widget(form) }}
+<button>Search</button>
+{{ form_end(form) }}
+
     {% for program in programs %}
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
             <p>{{ program.synopsis }}</p>
             {# Lien vers la fiche de la série : #}
-            <a href="{{ path('program_show', { 'id': program.id }) }}">Voir la fiche</a>
+            <a href="{{ path('program_show', { 'slug': program.slug }) }}">Voir la fiche</a>
         </div>
     {% else %}
         Aucune série trouvée.
